ChatGPT_Bonde_Comparison/CodeGen_ChatGPT/vpc-gateway-route_table-route/sample2/main.tf
terraform {
	required_providers {
		aws = {
			source  = "hashicorp/aws"
		}
	}
}
# Provider Block: aws in us east 1
provider "aws" {
  region = "us-east-1"
}

# Create a AWS VPC resource with private network 10.0.0.0/16
resource "aws_vpc" "my_vpc" {
  cidr_block = "10.0.0.0/16"
}

# AWS Internet Gateway with vpc id
resource "aws_internet_gateway" "my_internet_gateway" {
  vpc_id = aws_vpc.my_vpc.id
}

# Create AWS route table with vpc id
resource "aws_route_table" "my_route_table" {
  vpc_id = aws_vpc.my_vpc.id
}

# Create route resource. Use destination 0.0.0.0/0, gateway id and route table id
resource "aws_route" "my_route" {
  destination_cidr_block = "0.0.0.0/0"
  gateway_id = aws_internet_gateway.my_internet_gateway.id
  route_table_id = aws_route_table.my_route_table.id
}
